--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 @import "bootstrap-icons/font/bootstrap-icons.css";
+@import './shared/styles/colors.css';
 
 body {
   margin: 0;
   padding: 0;
+  background-color: var(--background-color);
+  font-family: 'Roboto';
 }
