styles home movie added

--- a/src/shared/layouts/styles/LoginLayout.css
+++ b/src/shared/layouts/styles/LoginLayout.css
@@ -10,7 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: url("../../../../public/banner2.jpg");
+    background: url("../../../../public/banner.jpg");
     
     background-position: center;
     background-size: cover;
