--- a/src/modules/movies/pages/styles/MoviePage.css
+++ b/src/modules/movies/pages/styles/MoviePage.css
@@ -18,7 +18,7 @@
     margin-left: 10px;
 
     .abs {
-      width: 200px;
+      width: 245px;
       height: 290px;
       background-color: rgba(255, 255, 255, 0.3);
       -webkit-backdrop-filter: blur(15px);
@@ -84,9 +84,12 @@
 
   .movies-section {
     grid-area: movies-section;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 18px;
 
     .movie-card {
-      background: url("../../../../../public/superman-card.jpg");
+      margin: 0 auto;
       background-position: center;
       background-size: cover;
       width: 225px;
@@ -115,14 +118,21 @@
             display: flex;
             justify-content: space-between;
 
-            button {
+            .link {
               width: 66px;
               height: 25px;
               border-radius: 10px;
               border: none;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              background-color: rgba(255, 255, 255, 0.1);
+              -webkit-backdrop-filter: blur(15px);
+              backdrop-filter: blur(15px);
 
               &:hover {
                 background-color: var(--primary-color);
+                color: var(--white-color);
               }
             }
 
@@ -141,10 +151,8 @@
   }
 }
 
-@media (max-width: 1080px) {
+@media (max-width: 1180px) {
   .main-home-container {
-    height: 100vh;
-    display: grid;
     grid-template-columns: 270px 1fr;
     grid-template-rows: 1fr 1fr;
     grid-template-areas:
@@ -161,12 +169,14 @@
 
     .banner-section {
       .movie-info-container {
-        height: 365px;
-      }
-    }
+        height: 370px;
 
-    .movies-section {
-      grid-area: movies-section;
+        .info-container {
+          width: 250px;
+          left: 25px;
+          bottom: 25px;
+        }
+      }
     }
   }
 }
