--- a/src/shared/components/styles/Navbar.css
+++ b/src/shared/components/styles/Navbar.css
@@ -1,4 +1,5 @@
 .nav-section {
+  position: relative;
   color: var(--white-color);
   padding: 0 40px;
 
@@ -80,15 +81,70 @@
     }
 
     .user-container {
+      cursor: pointer;
       align-items: center;
       display: flex;
       gap: 10px;
       grid-area: user-container;
+      border: 1px solid var(--white-color);
+      border-radius: 20px;
+      height: 40px;
+      justify-content: space-between;
 
-      img {
-        border-radius: 50%;
-        height: 40px;
-        width: 40px;
+      .user {
+        display: flex;
+        align-items: center;
+
+        img {
+          margin: 0 5px;
+          border-radius: 50%;
+          height: 30px;
+          width: 30px;
+        }
+
+        p {
+          margin: 0;
+        }
+      }
+
+      i {
+        margin-right: 10px;
+        font-size: 16px;
+      }
+    }
+  }
+
+  .user-menu {
+    position: absolute;
+    right: 48px;
+    top: 65px;
+    background-color: rgba(255, 255, 255, 0.2);
+    -webkit-backdrop-filter: blur(15px);
+    backdrop-filter: blur(15px);
+    width: 150px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    padding: 10px;
+
+    .user-menu-btn {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      width: 150px;
+      height: 150px;
+
+      button {
+        background-color: rgba(255, 255, 255, 0.2);
+        -webkit-backdrop-filter: blur(15px);
+        backdrop-filter: blur(15px);
+        border: 1px solid var(--white-color);
+        border-radius: 10px;
+        height: 35px;
+        color: var(--white-color);
+        cursor: pointer;
       }
     }
   }
@@ -109,7 +165,7 @@
     .navbar {
       display: grid;
       gap: 15px;
-      grid-template-areas: 
+      grid-template-areas:
         "user-container notification-container"
         "search-container search-container"
         "navbar-container navbar-container";
