--- a/src/shared/layouts/styles/HomeLayout.css
+++ b/src/shared/layouts/styles/HomeLayout.css
@@ -1,6 +1,6 @@
 .homeLayout {
-  height: 100vh;
-  background: url("../../../../public/furniture.jpg");
+  height: 4000px;
+  background: url("../../../../public/background.webp");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -12,5 +12,5 @@
   height: 100%;
   -webkit-backdrop-filter: blur(60px);
   backdrop-filter: blur(60px); 
-  background: rgba(25, 25, 25, 0.5);
+  background: rgba(25, 25, 25, 0.3);
 }
