--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 @import "bootstrap-icons/font/bootstrap-icons.css";
 @import './shared/styles/colors.css';
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
