--- a/src/modules/movies/pages/styles/MoviePage.css
+++ b/src/modules/movies/pages/styles/MoviePage.css
@@ -44,6 +44,7 @@
 
       .info-container {
         width: 400px;
+        height: 280px;
         padding: 25px;
         position: relative;
         left: 100px;
@@ -53,6 +54,9 @@
         backdrop-filter: blur(15px);
         color: var(--white-color);
         border-radius: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
 
         h3 {
           font-size: 26px;
@@ -172,6 +176,7 @@
         height: 370px;
 
         .info-container {
+          height: 312px;
           width: 250px;
           left: 25px;
           bottom: 25px;
