--- a/src/modules/movies/pages/styles/MoviePage.css
+++ b/src/modules/movies/pages/styles/MoviePage.css
@@ -96,7 +96,9 @@
       margin: 0 auto;
       background-position: center;
       background-size: cover;
-      width: 225px;
+      max-width: 225px;
+      min-width: 180px;
+      width: 100%;
       height: 290px;
       border-radius: 10px;
       display: flex;
@@ -183,5 +185,38 @@
         }
       }
     }
+  }
+}
+
+@media (max-width: 788px) {
+  .main-home-container {
+
+    grid-template-areas:
+      "navbar-section navbar-section"
+      "banner-section banner-section"
+      "abs-section movies-section";
+  
+    .navbar-section {
+      
+    }
+  
+  
+    .banner-section {
+      grid-area: banner-section;
+      padding: 10px;
+  
+      .movie-info-container {
+  
+        .info-container {
+          left: 25px;
+          bottom: 25px;
+  
+          button {
+            margin-top: 6px;
+          }
+        }
+      }
+    }
+  
   }
 }
