--- a/src/modules/auth/pages/styles/LoginPage.css
+++ b/src/modules/auth/pages/styles/LoginPage.css
@@ -59,4 +59,11 @@
       }
     }
   }
+
+  .alert-info {
+    height: 15px;
+    font-size: 12px;
+    color: var(--primary-color);
+    overflow: hidden;
+  }
 }
