--- a/src/shared/layouts/styles/LoginLayout.css
+++ b/src/shared/layouts/styles/LoginLayout.css
@@ -16,17 +16,20 @@
     background-size: cover;
   }
 
-  .section-form{
+  .section-form {
     grid-area: section-form;
     display: flex;
+    gap: 10px;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     min-height: 100vh;
 
-    .info-container{
+    .login-info-container{
       width: 338px;
       display: flex;
+      gap: 15px;
+      margin-bottom: 5px;
       flex-direction: column;
       color: var(--white-color);
       text-align: center;
@@ -36,6 +39,7 @@
       display: flex;
       align-items: center;
       color: var(--white-color);
+      gap: 10px;
 
       ul {
         display: flex;
