--- a/src/modules/movies/pages/styles/MoviePage.css
+++ b/src/modules/movies/pages/styles/MoviePage.css
@@ -60,7 +60,11 @@
 
         h3 {
           font-size: 26px;
-          margin-top: 0;
+          margin: 0;
+        }
+
+        .text-info {
+          margin: 0;
         }
 
         .gender-info {
@@ -178,7 +182,7 @@
         height: 370px;
 
         .info-container {
-          height: 312px;
+          height: 335px;
           width: 250px;
           left: 25px;
           bottom: 25px;
@@ -196,9 +200,6 @@
       "banner-section banner-section"
       "abs-section movies-section";
   
-    .navbar-section {
-      
-    }
   
   
     .banner-section {
