--- a/src/modules/movies/pages/styles/MovieTheaterPage.css
+++ b/src/modules/movies/pages/styles/MovieTheaterPage.css
@@ -153,11 +153,11 @@
 
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: start;
 
     .abs-container {
       width: 347px;
-      height: 805px;
+      height: 750px;
       border-radius: 10px;
       background-color: rgba(255, 255, 255, 0.3);
       -webkit-backdrop-filter: blur(15px);
